Fix contrast ratio for "a small" selector

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -46,7 +46,7 @@ a:hover, a:focus {
 
 a small {
   font-size:11px;
-  color:#777;
+  color:#717171;
   margin-top:-0.3em;
   display:block;
 }
